Fixed slider background ends being distorted at small width/heights

--- a/app/scss/brands/maytag/_ng-slider.scss
+++ b/app/scss/brands/maytag/_ng-slider.scss
@@ -134,10 +134,20 @@ div.people6 .jslider.vertical .jslider-value:not(.jslider-value-to) {
 		div.jslider-true-bg {
 			position: absolute;
 			margin-left: -18px;
-			height: 25px;
+			height: 100%;
 			width: 40px;
 			top: 0;
 			z-index: 10;
+
+			> div {
+            	background-color: #eeb200;
+            	width: 100%;
+            	height: 5px;
+            	position: absolute;
+            	z-index: 1;
+            	left: 0;
+            	top: 0;
+            }
 
 			img {
 				width: inherit;
@@ -210,19 +220,32 @@ div.people6 .jslider.vertical .jslider-value:not(.jslider-value-to) {
 			text-align: left; 
 			border: 0; 
 		}
+
 		.jslider-true-bg {
 			position: absolute;
 			margin-left: -30px;
-			width: 5px;
+			width: 106.6%;
 			top: 4px;
 			height: 32px;
 			pointer-events: none;
 			overflow: hidden;
             z-index: 10;
 
+            > div {
+            	background-color: #eeb200;
+            	width: 5px;
+            	height: 100%;
+            	position: absolute;
+            	z-index: 1;
+            	left: 0;
+            	top: 0;
+            }
+
 			img {
 				width: 860px;
 				height: inherit;
+				position:relative;
+				z-index: 2;
 			}
 		}
 		.jslider-bg {
